--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,16 @@
   justify-content: center;
   align-items: center;
   /* margin: 30px; */
-  height: 100%;
+  height: 80%;
   width: 100%;
-  background-color: rgb(177, 139, 93);
-  
 }
 
+.App h1 {
+  font-size: 70px;
+  font-style: italic;
+}
 
-.Menu{
+.Menu {
   width: 600px;
   height: 600px;
   border-radius: 10px;
@@ -38,7 +40,7 @@
   font-size: 30px;
   text-align: center;
   cursor: pointer;
-  
+
 }
 
 .Menu button:hover {
@@ -53,7 +55,15 @@
   color: rgb(22, 20, 20);
   text-align: center;
   cursor: pointer;
-  
+
+}
+
+.Menu img {
+  height: 300px;
+  width: 400px;
+  margin: 50px;
+  border: none;
+  border-radius: 150px;
 }
 
 .Quiz {
@@ -72,6 +82,10 @@
 
 }
 
+.Quiz h1 {
+  font-size: 40px;
+}
+
 .Quiz button {
   width: 250px;
   height: 40px;
@@ -81,6 +95,18 @@
   font-size: 20px;
   cursor: pointer;
   background-color: rgb(216, 224, 105);
+}
+
+.Quiz .ep #btn {
+  width: 250px;
+  height: 40px;
+  margin: 15px;
+  border: solid 0.5px rgb(48, 13, 80);
+  border-radius: 50px;
+  font-size: 20px;
+  cursor: pointer;
+  background-color: rgb(175, 53, 64);
+  margin-top: 60px;
 }
 
 .options {
@@ -107,6 +133,7 @@
   display: flex;
   margin-top: 50px;
 }
+
 .change button {
   width: 250px;
   height: 40px;
@@ -149,7 +176,18 @@
 
 }
 
-.EndScreen button  {
+.EndScreen h1 {
+  color: white;
+  font-size: 50px;
+  margin-top: 20px;
+}
+
+.EndScreen img {
+  height: 200px;
+  width: 200px;
+}
+
+.EndScreen button {
   width: 300px;
   height: 60px;
   margin: 5px;
@@ -168,7 +206,7 @@
   height: 60px;
   margin: 5px;
   background-color: rgb(177, 199, 77);
-  border: solid 3.5px rgb(44, 38, 38) ;
+  border: solid 3.5px rgb(44, 38, 38);
   border-radius: 20px;
   font-size: 25px;
   letter-spacing: 7px;
@@ -176,4 +214,226 @@
   text-align: center;
   cursor: pointer;
   margin-top: 30px;
+}
+
+/* media queries */
+
+@media (max-width:450px) {
+
+  .App h1 {
+    font-size: 40px;
+    font-style: italic;
+  }
+
+  .Menu {
+    width: 370px;
+    height: 370px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* text-align: center; */
+    background: linear-gradient(rgba(5, 0, 46, 0.849), transparent);
+    background-color: lightseagreen;
+    /* background-color: teal; */
+    margin-bottom: 5%;
+  }
+
+  .Menu button {
+    width: 170px;
+    height: 45px;
+    margin: 2px;
+    /* padding: 5%; */
+    border: solid rgb(42, 42, 71) 4px;
+    border-radius: 20px;
+    font-size: 25px;
+    text-align: center;
+    cursor: pointer;
+
+  }
+
+  .Menu button:hover {
+    width: 150px;
+    height: 45px;
+    margin: 2px;
+    background-color: rgb(154, 209, 91);
+    border: solid rgb(15, 15, 26) 4px;
+    border-radius: 20px;
+    font-size: 20px;
+    letter-spacing: 4px;
+    color: rgb(22, 20, 20);
+    text-align: center;
+    cursor: pointer;
+
+  }
+
+  .Menu img {
+    height: 150px;
+    width: 200px;
+    margin: 50px;
+    border: none;
+    border-radius: 150px;
+  }
+
+  .Quiz {
+    width: 380px;
+    height: 550px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(42, 35, 90, 0.911), transparent);
+    /* background-color: lightseagreen; */
+    background-color: rgb(141, 53, 175);
+    color: rgb(219, 173, 117);
+    margin-bottom: 5%;
+
+  }
+
+  .Quiz h1 {
+    font-size: 30px;
+  }
+
+  .Quiz button {
+    width: 220px;
+    height: 40px;
+    margin: 10px;
+    border: solid 0.5px rgb(48, 13, 80);
+    border-radius: 50px;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: rgb(216, 224, 105);
+  }
+
+  .Quiz .ep button {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 45px;
+    /* width: 100px; */
+  }
+
+  .Quiz .ep #btn {
+    width: 200px;
+    height: 40px;
+    margin: 10px;
+    border: solid 0.5px rgb(48, 13, 80);
+    border-radius: 50px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: rgb(175, 53, 64);
+    /* margin-top: 60px; */
+  }
+
+  .options {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .options button {
+    /* width: 200px; */
+    width: 260px;
+    height: 46px;
+    margin: 3px;
+    border: solid 0.5px rgb(48, 13, 80);
+    border-radius: 10px;
+    font-size: 19px;
+    cursor: pointer;
+    background-color: rgb(157, 224, 199);
+  }
+
+  .change {
+    display: flex;
+    margin-top: 30px;
+  }
+
+  .change button {
+    width: 160px;
+    height: 45px;
+    margin: 10px;
+    border: solid 0.5px rgb(48, 13, 80);
+    border-radius: 50px;
+    font-size: 15px;
+    cursor: pointer;
+    background-color: rgb(216, 224, 105);
+    /* background-color: rgb(175, 53, 64); */
+
+  }
+
+  .change button:hover {
+    width: 160px;
+    height: 45px;
+    margin: 9px;
+    letter-spacing: 1px;
+    border: solid 0.5px rgb(48, 13, 80);
+    border-radius: 50px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: rgb(212, 147, 62);
+    /* background-color: rgb(175, 53, 64); */
+
+  }
+
+  .EndScreen {
+    width: 370px;
+    height: 420px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* text-align: center; */
+    background: linear-gradient(rgb(165, 28, 28), transparent);
+    background-color: rgb(255, 161, 73);
+    margin-bottom: 5%;
+
+  }
+
+  .EndScreen button {
+    width: 200px;
+    height: 45px;
+    margin: 2px;
+    background-color: rgb(248, 187, 112);
+    border: solid 2px rgb(15, 15, 26);
+    border-radius: 20px;
+    font-size: 25px;
+    color: rgb(22, 20, 20);
+    text-align: center;
+    cursor: pointer;
+    /* margin-top: 20px; */
+  }
+
+  .EndScreen button:hover {
+    width: 200px;
+    height: 45px;
+    margin: 2px;
+    background-color: rgb(177, 199, 77);
+    border: solid 3.5px rgb(44, 38, 38);
+    border-radius: 20px;
+    font-size: 20px;
+    letter-spacing: 4px;
+    color: rgb(22, 20, 20);
+    text-align: center;
+    cursor: pointer;
+    /* margin-top: 20px; */
+  }
+
+  .EndScreen h1 {
+    color: white;
+    /* font-size: 50px; */
+    margin-top: 20px;
+  }
+
+  .EndScreen img {
+    height: 150px;
+    width: 150px;
+  }
+
 }
